# Finsey

./: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_account_account_number.py
apps/core/utils/: date.py  identifiers.py
apps/documents/: admin.py  models.py  serializers.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py  0002_document_file.py  0003_alter_document_file.py
apps/home/: views.py
apps/home/templates/home/: home.html  login.html
apps/savings/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/savings/migrations/: 0001_initial.py  0001_squashed_0005_remove_goal_purpose_remove_saving_purpose_goal_title_and_more.py  0002_remove_purpose_operation_type.py  0003_purpose_description.py  0004_goal.py  0005_remove_goal_purpose_remove_saving_purpose_goal_title_and_more.py  0006_goal_is_completed.py  0007_goal_notification_sent.py
apps/savings/services/: goal_progess.py  notifications.py  total_saved.py
apps/transactions/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0001_squashed_0002_alter_category_user_alter_transaction_user.py  0002_alter_category_user_alter_transaction_user.py  0002_alter_transaction_date.py  0003_alter_transaction_date.py  0003_alter_transaction_user.py  0004_alter_transaction_date.py  0004_category_transaction_category.py  0005_category_account_transaction_account.py  0005_transaction_is_constant.py  0006_alter_transaction_account_alter_transaction_category_and_more.py  0006_alter_transaction_date.py  0007_plannedtransaction_created_at_transaction_created_at.py  0007_transaction_user.py  0008_alter_transaction_date.py  0008_rename_is_constant_plannedtransaction_is_monthly_payment_and_more.py  0009_category_user.py
apps/transactions/services/: balance.py  notifications.py  planned_transactions.py  report.py
apps/users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_sent_inactivity_notification.py  0003_alter_user_sent_inactivity_notification.py  0004_remove_user_sent_inactivity_notification.py  0005_user_sent_inactivity_notification.py  0006_rename_sent_inactivity_notification_user_inactivity_notification_sent_at.py
apps/users/services/: inactivity_notifications.py
finsey/: __init__.py  asgi.py  celery_config.py  settings.py  urls.py  wsgi.py
test/: conftest.py
test/test_apps/test_accounts/: test_models.py
test/test_apps/test_accounts/test_api/: test_accounts.py
test/test_apps/test_core/test_utils/: test_date.py
test/test_apps/test_savings/: test_models.py
test/test_apps/test_savings/test_api/: test_savings.py  (+2 more)
test/test_apps/test_transactions/: test_models.py
(+7 files in other folders)
