[tool.black]
line-length = 100
skip-string-normalization = true
exclude = '''
    /(
        migrations
    )/
'''
[tool.poetry]
name = "finsey"
version = "0.1.0"
description = "A personal finance management tool"
authors = ["Agnieszka Wojdecka <agnieszka.wojdecka@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
django = "^5.1.4"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pygments = "^2.18.0"
celery = {version = "^5.4.0", extras = ["redis"]}
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
