[tool.black]
line-length = 100
skip-string-normalization = true
exclude = '''
    /(
        migrations
    )/
'''
[tool.poetry]
name = "finsey"
version = "0.1.0"
description = "A personal finance management tool"
authors = ["Agnieszka Wojdecka <agnieszka.wojdecka@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pygments = "^2.18.0"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg2-binary = "^2.9.10"
django-celery-beat = "^2.7.0"
ruff = "^0.9.1"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
